# nfa-core

./: .env.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  ROADMAP.md  docker-compose.yml
.github/workflows/: ci.yml
config/: default.toml  prometheus.yml
config/grafana-dashboards/: nfa-dashboard.json
crates/nfa-broker/: Cargo.toml
crates/nfa-broker/src/: client.rs  config.rs  lib.rs  main.rs  metrics.rs  service.rs  storage.rs
crates/nfa-cli/: Cargo.toml
crates/nfa-cli/src/: main.rs
crates/nfa-common/: Cargo.toml
crates/nfa-common/src/: errors.rs  intent.rs  lib.rs  types.rs
crates/nfa-idl/: Cargo.toml
crates/nfa-idl/src/: lib.rs
crates/nfa-scheduler/: Cargo.toml
crates/nfa-scheduler/src/: lib.rs  main.rs
crates/nfa-uhalib/: Cargo.toml
crates/nfa-uhalib/src/: lib.rs  main.rs
docs/: development.md
docs/architecture/: overview.md
examples/translator/: service.go  translator.intent.yaml  translator.proto
go/: go.mod
go/plugins/example/: example.intent.yaml  example.proto  main.go
go/protos/broker/v1alpha/: broker.pb.go
go/protos/intent/v1alpha/: intent.pb.go
go/protos/scheduler/v1alpha/: scheduler.pb.go
go/runtime/: contract.go  health.go  main.go  runtime.go  server.go
go/tools/protoc-gen/: main.go
protocols/broker/: broker.proto
protocols/intent/v1alpha/: intent.proto
protocols/scheduler/v1alpha/: scheduler.proto
scripts/: codegen.sh  deploy.sh  setup-dev.sh
scripts/docker/: broker.Dockerfile  runtime.Dockerfile
