[package]
name = "nfa-scheduler"
version = "0.1.0"
edition = "2025"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
nfa-common = { path = "../nfa-common" }
nfa-broker = { path = "../nfa-broker" }

[dependencies.redis]
version = "0.23"
features = ["tokio-comp"]

[dependencies.sqlx]
version = "0.7"
features = ["postgres", "runtime-tokio", "macros"]

[dev-dependencies]
tempfile = "3.3"